// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> Render component 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #272643;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 2rem;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100vh;
  width: 100vw;
}

.c1 {
  color: #f6fafd;
  text-align: center;
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <h1>
      Hello Hero
    </h1>
  </div>
</section>
`;

exports[`<Hero /> Render component with prop text 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #272643;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 2rem;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 100vh;
  width: 100vw;
}

.c1 {
  color: #f6fafd;
  text-align: center;
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    Hello
  </div>
</section>
`;
